fixed white space and button issues

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 *{
   margin: 0px;
   font-family: Arvo;
+  overflow-x: hidden;
 }
 
 .topbod{
   background-color: #1F2937;
   color: white;
   height: 500px;
-  width: auto;
+  overflow: hidden;
 }
 
 .topbod .lheader{
@@ -177,36 +178,43 @@ div .bod1-text{
   font-size: 20px;
 }
 
-.cta{
+#cta{
+  display: flex;
   background-color: #3882F6;
   border: 15px;
   border-radius: 7px;
-  padding: 30px;
+  padding: 20px;
   margin: 50px;
   color: #F9FAF8;
   display: flex;
-  width: 600px;
-  align-items: center;
-  margin-left: 300px;
+  width: 50%;
+  align-items: stretch;
+  margin-left: 250px;
+  padding-left: 10px;
+  overflow: auto;
 }
 
-.cta_left{
+#cta .cta_left{
   text-align: left;
   color: #F9FAF8;
   display: flex-start;
   flex-direction: row;
-  width: 800px;
+  width: 700px;
   padding-left: 50px;
 }
 
-.cta-button{
+#cta .cta-button{
   background-color: #3882F6;
   color: white;
   text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+  display: flex;
+  font-size: 15px;
   border-radius: 7px;
   border-color: white;
+  padding: 15px;
+  white-space: nowrap;
+  justify-content: center;
+  width: 100%;
 }
 
 .center_foot{
